# ICDeno

./: README.md
codecs/oxipng/pkg/: squoosh_oxipng.js  squoosh_oxipng_bg.js
codecs/png/: Cargo.toml  README.md  package-lock.json  package.json
codecs/png/pkg/: package.json  png_bg.d.ts  png_bg.js  png_bg.wasm
codecs/png/src/: lib.rs
src/: emscripten-wasm.d.ts  main.ts  types.ts
src/codecs/: util.ts
src/codecs/imagequant/: processor.ts
src/codecs/oxipng/: encoder.ts
src/codecs/png/: decoder.ts
src/codecs/webp/: encoder.ts
