[package]
name = "png"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
png = "0.16.7"
wasm-bindgen = "0.2.64"
log = { version = "0.4", features = ["release_max_level_off"] }

[profile.release]
lto = true
opt-level = "s"
